--- a/contact.html
+++ b/contact.html
@@ -564,18 +564,18 @@
 
         <form action="mailto:johanna.sahlberg@outlook.de " method="post" id="contact-form" class="contact-section__form" name="Contact form">
 
-          <div class="input-wrapper">
+          <div class="input-wrapper input-wrapper1">
             <label class="standard-label standard-label__email" for="contact-form-input__email"> Your e-mail adress: </label>
             <input type="email" id="contact-form-input__email" class="contact-form__input" required> <br>
           </div>
 
-          <div class="input-wrapper">
+          <div class="input-wrapper input-wrapper2">
             <label class="standard-label standard-label__tel" for="contact-form-input__tel"> Your phone number: </label>
             <input type="tel" id="contact-form-input__tel" class="contact-form__input"> <br>
             <!-- ? add country ID later with js ? -->
           </div>
 
-          <div class="input-wrapper">
+          <div class="input-wrapper input-wrapper3">
             <label class="standard-label standard-label__message" for="contact-form-input__message"> Your message*:</label>
             <textarea id="contact-form-input__message" class="contact-form__input" rows="8" cols="80" maxlength="500" required> </textarea>
             <!-- not sure if rows and cols will be needed later in the process // -->
